fix(taskbar): set a very high z-index for highest stacking above all windows

--- a/src/components/Taskbar/Taskbar.scss
+++ b/src/components/Taskbar/Taskbar.scss
@@ -2,6 +2,7 @@
   @include acrylic-material-light(70%);
 
   position: absolute;
+  z-index: 9999;
   display: flex;
   gap: var(--spacing-horizontal-s);
   align-items: center;
